CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5
CRTO Gain: $ -0.33 Win %: 0 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_TR_QP_DB6
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_RV_TR_DB6
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_RV_AV_DB6
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_RV_AL_DB6
CRTO Gain: $ -0.67 Win %: 0 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_RV_QP_DB6
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_HM_TR_DB6
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_HM_AV_DB6
CRTO Gain: $ -0.51 Win %: 0 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_HM_QP_DB6
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_IT_QL_DB6
CRTO Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_IT_QP_DB6
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_TR_IR1
CRTO Gain: $ -0.5 Win %: 0 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_TR_QP
CRTO Gain: $ -0.99 Win %: 0 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_QP_IR1
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_RV_TR
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_RV_AV
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_RV_AL
CRTO Gain: $ -0.73 Win %: 0 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_RV_QP
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_HM_TR
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_HM_AV
CRTO Gain: $ -0.57 Win %: 0 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_HM_QP
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_IT_QL
CRTO Gain: $ -0.03 Win %: 0 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_IT_QP
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_AO_AC
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_RV
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_IR1
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_TR
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_AV
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_AL
CRTO Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_VI
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_LI
CRTO Gain: $ -0.57 Win %: 0 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_QP
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_HM
CRTO Gain: $ 0.65 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_SS
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_QL
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_DB6
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_AO
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_AC
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_IT
CRTO Gain: $ -0.33 Win %: 0 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_TR_QP_DB6
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_RV_TR_DB6
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_RV_AV_DB6
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_RV_AL_DB6
CRTO Gain: $ -0.67 Win %: 0 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_RV_QP_DB6
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_HM_TR_DB6
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_HM_AV_DB6
CRTO Gain: $ -0.51 Win %: 0 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_HM_QP_DB6
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_IT_QL_DB6
CRTO Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_IT_QP_DB6
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_TR_IR1
CRTO Gain: $ -0.5 Win %: 0 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_TR_QP
CRTO Gain: $ -0.99 Win %: 0 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_QP_IR1
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_RV_TR
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_RV_AV
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_RV_AL
CRTO Gain: $ -0.73 Win %: 0 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_RV_QP
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_HM_TR
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_HM_AV
CRTO Gain: $ -0.57 Win %: 0 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_HM_QP
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_IT_QL
CRTO Gain: $ -0.03 Win %: 0 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_IT_QP
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_AO_AC
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_RV
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_IR1
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_TR
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_AV
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_AL
CRTO Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_VI
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_LI
CRTO Gain: $ -0.57 Win %: 0 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_QP
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_HM
CRTO Gain: $ 0.65 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_SS
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_QL
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_DB6
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_AO
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_AC
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_IT
CRTO Gain: $ -0.32 Win %: 0 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_TR_QP_DB6
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_RV_TR_DB6
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_RV_AV_DB6
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_RV_AL_DB6
CRTO Gain: $ -0.48 Win %: 0 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_RV_QP_DB6
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_HM_TR_DB6
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_HM_AV_DB6
CRTO Gain: $ -0.43 Win %: 0 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_HM_QP_DB6
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_IT_QL_DB6
CRTO Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_IT_QP_DB6
CRTO Gain: $ 0.28 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_TR_IR1
CRTO Gain: $ -0.32 Win %: 0 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_TR_QP
CRTO Gain: $ -0.89 Win %: 0 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_QP_IR1
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_RV_TR
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_RV_AV
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_RV_AL
CRTO Gain: $ -0.48 Win %: 0 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_RV_QP
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_HM_TR
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_HM_AV
CRTO Gain: $ -0.43 Win %: 0 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_HM_QP
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_IT_QL
CRTO Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_IT_QP
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_AO_AC
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_RV
CRTO Gain: $ 0.28 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_IR1
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_TR
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_AV
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_AL
CRTO Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_VI
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_LI
CRTO Gain: $ -0.43 Win %: 0 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_QP
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_HM
CRTO Gain: $ 0.65 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_SS
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_QL
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_DB6
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_AO
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_AC
CRTO Gain: $ 0.69 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_IT
CRTO Gain: $ -1.01 Win %: 0 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_TR_QP_DB6
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_RV_TR_DB6
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_RV_AV_DB6
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_RV_AL_DB6
CRTO Gain: $ -0.32 Win %: 0 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_RV_QP_DB6
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_HM_TR_DB6
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_HM_AV_DB6
CRTO Gain: $ -0.48 Win %: 0 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_HM_QP_DB6
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_IT_QL_DB6
CRTO Gain: $ -0.06 Win %: 0 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_IT_QP_DB6
CRTO Gain: $ -0.74 Win %: 0 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_TR_IR1
CRTO Gain: $ -1.01 Win %: 0 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_TR_QP
CRTO Gain: $ -0.86 Win %: 0 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_QP_IR1
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_RV_TR
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_RV_AV
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_RV_AL
CRTO Gain: $ -0.32 Win %: 0 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_RV_QP
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_HM_TR
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_HM_AV
CRTO Gain: $ -0.48 Win %: 0 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_HM_QP
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_IT_QL
CRTO Gain: $ -0.06 Win %: 0 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_IT_QP
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_AO_AC
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_RV
CRTO Gain: $ -0.74 Win %: 0 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_IR1
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_TR
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_AV
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_AL
CRTO Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_VI
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_LI
CRTO Gain: $ -0.48 Win %: 0 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_QP
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_HM
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_SS
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_QL
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_DB6
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_AO
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_AC
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_IT
CRTO Gain: $ 0.56 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_IT
CRTO Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5
CRTO Gain: $ 0.9 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB2_OS2_CB5_CS5_TS
CRTO Gain: $ 0.9 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB1_OS1_CB5_CS5_TS
CRTO Gain: $ 0.74 Win %: 100.00 in 1 days with algo TB5_HI_QM_OB3_OS3_CB5_CS5_TS
CRTO Gain: $ 0.84 Win %: 100.00 in 1 days with algo TB5_HL_HI_QM_OB2_OS2_CB5_CS5_TS
