CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2
CSIQ Gain: $ -2.16 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_TR_QP_DB8
CSIQ Gain: $ -0.54 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_RV_TR_DB8
CSIQ Gain: $ 0.98 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_RV_AV_DB8
CSIQ Gain: $ 1.44 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_RV_AL_DB8
CSIQ Gain: $ -2.81 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_RV_QP_DB8
CSIQ Gain: $ -0.54 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_HM_TR_DB8
CSIQ Gain: $ 0.98 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_HM_AV_DB8
CSIQ Gain: $ -2.81 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_HM_QP_DB8
CSIQ Gain: $ 0.02 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_IT_QL_DB8
CSIQ Gain: $ 0.02 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_IT_QP_DB8
CSIQ Gain: $ -0.11 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_TR_IR2
CSIQ Gain: $ -3.04 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_TR_QP
CSIQ Gain: $ -4.34 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_QP_IR2
CSIQ Gain: $ -0.57 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_RV_TR
CSIQ Gain: $ 0 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_RV_AV
CSIQ Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_RV_AL
CSIQ Gain: $ -3.53 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_RV_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_HM_TR
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_HM_AV
CSIQ Gain: $ -3.58 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_HM_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_IT_QL
CSIQ Gain: $ -0.12 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_IT_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_AO_AC
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_RV
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_IR2
CSIQ Gain: $ -0.57 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_TR
CSIQ Gain: $ 0 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_AV
CSIQ Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_AL
CSIQ Gain: $ -0.06 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_VI
CSIQ Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_LI
CSIQ Gain: $ -3.53 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_HM
CSIQ Gain: $ 0.86 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_SS
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_QL
CSIQ Gain: $ 1.39 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_DB8
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_AO
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_AC
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB2_CS2_IT
CSIQ Gain: $ -2.16 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_TR_QP_DB8
CSIQ Gain: $ -0.54 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_RV_TR_DB8
CSIQ Gain: $ 0.98 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_RV_AV_DB8
CSIQ Gain: $ 1.44 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_RV_AL_DB8
CSIQ Gain: $ -2.81 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_RV_QP_DB8
CSIQ Gain: $ -0.54 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_HM_TR_DB8
CSIQ Gain: $ 0.98 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_HM_AV_DB8
CSIQ Gain: $ -2.81 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_HM_QP_DB8
CSIQ Gain: $ 0.02 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_IT_QL_DB8
CSIQ Gain: $ 0.02 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_IT_QP_DB8
CSIQ Gain: $ -0.11 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_TR_IR2
CSIQ Gain: $ -3.04 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_TR_QP
CSIQ Gain: $ -4.34 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_QP_IR2
CSIQ Gain: $ -0.57 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_RV_TR
CSIQ Gain: $ 0 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_RV_AV
CSIQ Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_RV_AL
CSIQ Gain: $ -3.53 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_RV_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_HM_TR
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_HM_AV
CSIQ Gain: $ -3.58 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_HM_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_IT_QL
CSIQ Gain: $ -0.12 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_IT_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_AO_AC
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_RV
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_IR2
CSIQ Gain: $ -0.57 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_TR
CSIQ Gain: $ 0 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_AV
CSIQ Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_AL
CSIQ Gain: $ -0.06 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_VI
CSIQ Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_LI
CSIQ Gain: $ -3.53 Win %: 0 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_HM
CSIQ Gain: $ 0.86 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_SS
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_QL
CSIQ Gain: $ 1.39 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_DB8
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_AO
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_AC
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB2_OS2_CB1_CS1_IT
CSIQ Gain: $ -2.16 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_TR_QP_DB8
CSIQ Gain: $ -0.54 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_RV_TR_DB8
CSIQ Gain: $ 0.98 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_RV_AV_DB8
CSIQ Gain: $ 1.44 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_RV_AL_DB8
CSIQ Gain: $ -2.81 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_RV_QP_DB8
CSIQ Gain: $ -0.54 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_HM_TR_DB8
CSIQ Gain: $ 0.98 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_HM_AV_DB8
CSIQ Gain: $ -2.81 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_HM_QP_DB8
CSIQ Gain: $ 0.02 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_IT_QL_DB8
CSIQ Gain: $ 0.02 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_IT_QP_DB8
CSIQ Gain: $ -0.11 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_TR_IR2
CSIQ Gain: $ -3.04 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_TR_QP
CSIQ Gain: $ -4.34 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_QP_IR2
CSIQ Gain: $ -0.57 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_RV_TR
CSIQ Gain: $ 0 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_RV_AV
CSIQ Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_RV_AL
CSIQ Gain: $ -3.53 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_RV_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_HM_TR
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_HM_AV
CSIQ Gain: $ -3.58 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_HM_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_IT_QL
CSIQ Gain: $ -0.12 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_IT_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_AO_AC
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_RV
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_IR2
CSIQ Gain: $ -0.57 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_TR
CSIQ Gain: $ 0 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_AV
CSIQ Gain: $ 0.85 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_AL
CSIQ Gain: $ -0.06 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_VI
CSIQ Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_LI
CSIQ Gain: $ -3.53 Win %: 0 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_QP
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_HM
CSIQ Gain: $ 0.86 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_SS
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_QL
CSIQ Gain: $ 1.39 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_DB8
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_AO
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_AC
CSIQ Gain: $ 1.08 Win %: 100.00 in 1 days with algo TB4_CC_QM_OB1_OS1_CB2_CS2_IT
CSIQ Gain: $ -2.66 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TR_QP_DB8
CSIQ Gain: $ -1.31 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_TR_DB8
CSIQ Gain: $ -0.07 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_AV_DB8
CSIQ Gain: $ 1.06 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_AL_DB8
CSIQ Gain: $ -0.84 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_QP_DB8
CSIQ Gain: $ -1.31 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_TR_DB8
CSIQ Gain: $ -0.07 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_AV_DB8
CSIQ Gain: $ -0.84 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_QP_DB8
CSIQ Gain: $ 1.35 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT_QL_DB8
CSIQ Gain: $ 0.06 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT_QP_DB8
CSIQ Gain: $ -1.09 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TR_IR2
CSIQ Gain: $ -2.63 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TR_QP
CSIQ Gain: $ -0.72 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_QP_IR2
CSIQ Gain: $ -1.09 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_TR
CSIQ Gain: $ 0.15 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_AV
CSIQ Gain: $ 1.28 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_AL
CSIQ Gain: $ -0.72 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV_QP
CSIQ Gain: $ -0.92 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_TR
CSIQ Gain: $ 0.32 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_AV
CSIQ Gain: $ -0.69 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM_QP
CSIQ Gain: $ 0.12 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT_QL
CSIQ Gain: $ 0.08 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT_QP
CSIQ Gain: $ -30.41 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_AO_AC
CSIQ Gain: $ 1.57 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_RV
CSIQ Gain: $ 1.57 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IR2
CSIQ Gain: $ -1.09 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_TR
CSIQ Gain: $ 0.15 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_AV
CSIQ Gain: $ 1.28 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_AL
CSIQ Gain: $ -0.41 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_VI
CSIQ Gain: $ 1.05 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_LI
CSIQ Gain: $ -0.72 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_QP
CSIQ Gain: $ 1.74 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_HM
CSIQ Gain: $ 1.26 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_SS
CSIQ Gain: $ 1.57 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_QL
CSIQ Gain: $ 1.35 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_DB8
CSIQ Gain: $ 1.57 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_AO
CSIQ Gain: $ -30.41 Win %: 0 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_AC
CSIQ Gain: $ 0.12 Win %: 100.00 in 1 days with algo TB4_HL_QM_OB1_OS1_CB5_CS5_IT
